# abrt-netbook

./: autogen.sh  config.h.in  configure
po/: abrt_fi.po  abrt_it.po  abrt_pt.po  abrt_zh_CN.po  abrt_zh_TW.po  ar.po  ast.po  ca.po  cs.po  en_GB.po  en_de.po  en_ja.po  en_nl.po  en_sv.po  es.po  fa.po  fr.po  gl.po  hu.po  id.po  ko.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  wa.po
src/: Makefile.am  Makefile.in  aclocal.m4  configure.ac
src/ControlPanelApplet/: Makefile.am  Makefile.in  abrt-cc-panel.c  abrt-cc-panel.h  abrt-module.c  abrt-properties.desktop.in.in
src/po/: POTFILES.in
